# wanna_ls

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
tests/: tests.rs
