[package]
name = "wanna_ls"
version = "0.1.0"
edition = "2021"

authors = ["Yuki SUZUKI <y-suzuki@radiol.med.osaka-u.ac.jp>"]
repository = "https://github.com/ykszk/wanna_ls"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
libc = "0.2.158"
log = "0.4.22"
nix = { version = "0.29.0", features = ["fs", "dir"] }
serde = { version = "1.0.208", features = ["derive"] }
toml = "0.8.19"
