[package]
name = "wanna_ls"
version = "0.1.1"
edition = "2021"

authors = ["Yuki SUZUKI <y-suzuki@radiol.med.osaka-u.ac.jp>"]
repository = "https://github.com/ykszk/wanna_ls"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
clap_complete = "4.5.23"
env_logger = "0.11.5"
log = "0.4.22"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
lto = true
opt-level = 3
strip = true
